--- a/fuentes/visuales/grado06/guion14/guionAbierto/CS_06_14_CO_Recurso020/Profesor.html
+++ b/fuentes/visuales/grado06/guion14/guionAbierto/CS_06_14_CO_Recurso020/Profesor.html
@@ -10,11 +10,13 @@
 		<p class="cabecera1">
 			Objetivo</p>
 		<p>
-			La secuencia de im&aacute;genes permite mostrar a los estudiantes cu&aacute;l fue la importancia de la arqueolog&iacute;a en el descubrimiento y estudio de las culturas minoica y mic&eacute;nica.</p>
+			Mostrar a los estudiantes cu&aacute;l fue la importancia de la arqueolog&iacute;a en el descubrimiento y estudio de las culturas minoica y mic&eacute;nica.</p>
 		<p class="cabecera1">
 			Propuesta</p>
+		<p class="cabecera2">
+			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Antes de ver el&nbsp;recurso puedes hacer las siguientes preguntas a los estudiantes para que comprendan qu&eacute; es la arqueolog&iacute;a y para qu&eacute; sirve:</p>
+			Puede hacer las siguientes preguntas a los estudiantes para que comprendan qu&eacute; es la arqueolog&iacute;a y para qu&eacute; sirve:</p>
 		<p class="tab1">
 			- &iquest;Por qu&eacute; es &uacute;til la arqueolog&iacute;a?</p>
 		<p class="tab1">
@@ -22,11 +24,11 @@
 		<p class="tab1">
 			- &iquest;Por qu&eacute; es importante para conocer el pasado?</p>
 		<p>
-			El v&iacute;deo incluye el t&eacute;rmino &quot;rhyt&oacute;n&quot;,&nbsp;no&nbsp;conocido por los estudiantes. Para facilitar la comprensi&oacute;n del mismo, en la Ficha del alumno se puede encontrar las definici&oacute;n de esta palabra.</p>
+			El video incluye el t&eacute;rmino &quot;rhyt&oacute;n&quot;,&nbsp;no&nbsp;conocido por los estudiantes. Para facilitar la comprensi&oacute;n del mismo, en la Ficha del alumno se puede encontrar las definici&oacute;n de esta palabra.</p>
 		<p class="cabecera2">
 			Despu&eacute;s de la presentaci&oacute;n</p>
 		<p>
-			Haz nuevas preguntas&nbsp;para asegurar la comprensi&oacute;n del&nbsp;recurso y relacionar todo ello con las cuestiones iniciales:</p>
+			Formule preguntas nuevas para asegurar la comprensi&oacute;n del&nbsp;recurso y relacionar todo ello con las preguntas iniciales:</p>
 		<p class="tab1">
 			- &iquest;Qu&eacute; nos cuentan los textos antiguos sobre aquella &eacute;poca?</p>
 		<p class="tab1">
@@ -36,6 +38,6 @@
 		<p class="tab1">
 			- &iquest;En qu&eacute; lugares surgieron la civilizaci&oacute;n minoica y mic&eacute;nica?</p>
 		<p>
-			Pide&nbsp;a los estudiantes que busquen informaci&oacute;n sobre&nbsp;la guerra de Troya, el rey&nbsp;Agamen&oacute;n, el rey Minos o el minotauro.</p>
+			Pida a los estudiantes que busquen informaci&oacute;n sobre&nbsp;la guerra de Troya, el rey&nbsp;Agamen&oacute;n, el rey Minos o el minotauro.</p>
 	</body>
 </html>
