--- a/fuentes/visuales/grado11/guion07/guionAbierto/CS_11_07_CO_cuaderno/preview.html
+++ b/fuentes/visuales/grado11/guion07/guionAbierto/CS_11_07_CO_cuaderno/preview.html
@@ -311,9 +311,8 @@ nuestros hábitos de consumo</strong>.</p>
                         <div class="right">
                           <div class="text">
                             <p>
-                              <strong>Uno de los desafíos</strong> que enfrenta <strong>la
-problemática ambiental del mundo</strong> está relacionado con la
-distancia que ha tomado el ser humano frente a las otras especies.
+                              <strong>Uno de los desafíos</strong> que enfrenta <strong>la problemática ambiental del mundo</strong> está relacionado con
+la distancia que ha tomado el ser humano frente a las otras especies.
 ¿Sabemos qué árboles o vegetación tiene el barrio, la calle o los
 alrededores de la casa, o qué pájaros o insectos viven cerca? Esta
 no es una pregunta sobre sus nombres científicos o su clasificación
@@ -421,7 +420,8 @@ que ver con cambios en el sistema de consumo.</p>
                                   <strong>Tipo de producto</strong>
                                 </td>
                                 <td>
-                                  <strong>Duración en las manos del consumidor</strong>
+                                  <strong>Duración en las manos
+del consumidor</strong>
                                 </td>
                                 <td>
                                   <strong>Desecho generado</strong>
@@ -456,15 +456,14 @@ que ver con cambios en el sistema de consumo.</p>
                           </div>
                           <div class="text">
                             <p>
-                              <strong>Reconocer el ciclo de las cosas</strong> nos conduce
-a saber más sobre los productos que compramos, indagar de dónde provienen
-y así tomar decisiones ambientales sobre la adquisición de productos
-y servicios, y en este mismo sentido revalorar la necesidad de consumir
-o de comprar. Cada habitante del planeta es responsable del calentamiento
-global, y cada uno deja una huella de carbono en la atmosfera, ya
-que está inmerso en el ciclo del producto o servicio de origen en
-combustibles fósiles, lo que <strong>cada acción diaria lleva a la
-liberación de dióxido de carbono</strong>.</p>
+                              <strong>Reconocer el ciclo de las cosas</strong> nos conduce a saber más sobre los productos que compramos, indagar
+de dónde provienen y así tomar decisiones ambientales sobre la adquisición
+de productos y servicios, y en este mismo sentido revalorar la necesidad
+de consumir o de comprar. Cada habitante del planeta es responsable
+del calentamiento global, y cada uno deja una huella de carbono en
+la atmosfera, ya que está inmerso en el ciclo del producto o servicio
+de origen en combustibles fósiles, lo que <strong>cada acción diaria
+lleva a la liberación de dióxido de carbono</strong>.</p>
                           </div>
                         </div>
                       </div>
@@ -587,8 +586,8 @@ en el intento de generar una "cadena de posconsumo".</p>
                           </div>
                           <div class="text">
                             <p>
-                              <strong>Otro impacto ambiental</strong> de esta Tercera Revolución
-Industrial es <strong>la extracción de las materias primas</strong> necesarias para la fabricación de aparatos electrónicos, como los
+                              <strong>Otro impacto ambiental</strong> de esta Tercera
+Revolución Industrial es <strong>la extracción de las materias primas</strong> necesarias para la fabricación de aparatos electrónicos, como los
 celulares, los computadores y los videojuegos; para ello se requieren
 ciertos minerales como el coltán y otros componentes que se extraen
 generalmente en regiones de África y América Latina, donde las condiciones
@@ -645,13 +644,11 @@ fósiles y el progresivo deterioro del recurso hídrico.</p>
                         <div class="right">
                           <div class="text">
                             <p>
-                              <strong>Durante el ciclo de producción</strong> de cualquier
-producto o servicio <strong>se requiere energía</strong>, esta se
-consigue a través de <strong>la combustión, fenómeno en el que una
-sustancia al contacto con el oxígeno se quema</strong>. El hidrógeno
-y el carbono son las sustancias que arden con mayor facilidad y que
-están presentes en grandes cantidades en el petróleo, el carbón y
-el gas.</p>
+                              <strong>Durante el ciclo de producción</strong> de
+cualquier producto o servicio <strong>se requiere energía</strong>, esta se consigue a través de <strong>la combustión, fenómeno en
+el que una sustancia al contacto con el oxígeno se quema</strong>. El hidrógeno y el carbono son las sustancias que arden con mayor
+facilidad y que están presentes en grandes cantidades en el petróleo,
+el carbón y el gas.</p>
                           </div>
                           <div class="text">
                             <p>Estos combustibles se han formado durante millones de años en el
@@ -1128,8 +1125,8 @@ el carbón.</p>
                                   <strong>Otras energías renovables</strong>
                                 </td>
                                 <td>
-                                  <strong>Térmica convencional (uso de combustibles
-fósiles)</strong>
+                                  <strong>Térmica convencional
+(uso de combustibles fósiles)</strong>
                                 </td>
                               </tr>
                               <tr>
@@ -1645,7 +1642,8 @@ público, privado y la ciudadanía en general. </td>
                               </tr>
                               <tr>
                                 <td>
-                                  <strong>Ministerio de Ambiente y Desarrollo Sostenible (MADS) </strong>
+                                  <strong>Ministerio de Ambiente y Desarrollo
+Sostenible (MADS) </strong>
                                 </td>
                                 <td>Dirige la gestión del ambiente y de los recursos naturales renovables,
 se encarga de orientar y regular el ordenamiento ambiental del territorio
@@ -1664,8 +1662,8 @@ de Áreas Protegidas.</td>
                               </tr>
                               <tr>
                                 <td>
-                                  <strong>Corporaciones Autónomas Regionales y de Desarrollo Sostenible
-- CAR</strong>
+                                  <strong>Corporaciones Autónomas Regionales
+y de Desarrollo Sostenible - CAR</strong>
                                 </td>
                                 <td>Son entidades públicas regionales que integran varios territorios
 como partes de una unidad, ya sea un ecosistema, una zona biogeográfica
@@ -1676,7 +1674,8 @@ Sostenible.</td>
                               </tr>
                               <tr>
                                 <td>
-                                  <strong>Sistema de Información Ambiental de Colombia (SIAC)</strong>
+                                  <strong>Sistema de Información Ambiental de
+Colombia (SIAC)</strong>
                                 </td>
                                 <td>Está integrado por actores, políticas, procesos y tecnologías
 implicados en la gestión de información ambiental del país.</td>
@@ -1738,7 +1737,7 @@ establecidos en la Constitución.</p>
                             </div>
                             <div class="practica_right">
                               <div class="practica_inside">
-                                <a href="/LoIdRedirect.aspx?LoId=CS_11_07_CO_Recurso160&amp;IdRecurso=RES-4D17617B210D4A7AA430F9548E749E58" target="_blank">Conoce la política ambiental en Colombia</a>
+                                <a href="/LoIdRedirect.aspx?LoId=CS_11_07_CO_Recurso160&amp;IdRecurso=RES-4D17617B210D4A7AA430F9548E749E58" target="_blank">Conoce aspectos de la política ambiental en Colombia</a>
                               </div>
                             </div>
                           </div>
@@ -1858,7 +1857,7 @@ varios espacios distribuidos a lo largo y ancho del territorio nacional.</p>
                             </div>
                             <div class="profundiza_right">
                               <div class="profundiza_inside">
-                                <a href="/LoIdRedirect.aspx?LoId=CS_11_07_CO_Recurso170&amp;IdRecurso=RES-E38CD3D991974AABA0D6738B7F431704" target="_blank">Los efectos de la economía en el medio ambiente en Colombia</a>
+                                <a href="/LoIdRedirect.aspx?LoId=CS_11_07_CO_Recurso170&amp;IdRecurso=RES-E38CD3D991974AABA0D6738B7F431704" target="_blank">Los efectos de la minería en el medio ambiente en Colombia</a>
                               </div>
                             </div>
                           </div>
