--- a/fuentes/visuales/grado10/guion04/guionAbierto/CS_10_04_CO_Recurso210/Profesor.html
+++ b/fuentes/visuales/grado10/guion04/guionAbierto/CS_10_04_CO_Recurso210/Profesor.html
@@ -16,9 +16,9 @@
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
 		<p class="normal">
-			Inicie con una lluvia de ideas sobre lo que conocen los estudiantes acerca del narcotr&aacute;fico en Colombia. Inclusive pueden pedirles con anterioridad que indaguen con sus padres o abuelos sobre este tema y que despu&eacute;s lo compartan en la clase. Sugi&eacute;rales que averig&uuml;en c&oacute;mo fue la vida cotidiana de los colombianos en los a&ntilde;os ochenta y noventa.</p>
+			Inicie con una lluvia de ideas sobre lo que conocen los estudiantes acerca del narcotr&aacute;fico en Colombia. Inclusive puede pedirles con anterioridad que indaguen con sus padres o abuelos sobre este tema y que despu&eacute;s lo compartan en la clase. Sugi&eacute;rales que averig&uuml;en c&oacute;mo fue la vida cotidiana de los colombianos en los a&ntilde;os ochenta y noventa.</p>
 		<p>
-			Es importante contextualizar el panorama pol&iacute;tico, econ&oacute;mico y cultural de Colombia en esas d&eacute;cadas y la importancia de las situaciones desencadenadas por los carteles de Cali y Medell&iacute;n con el uso del terrorismo y dem&aacute;s acciones que afectaron a la sociedad civil durante este periodo.</p>
+			Es importante contextualizar el panorama pol&iacute;tico, econ&oacute;mico y social de Colombia en esas d&eacute;cadas y la trascendencia de las situaciones desencadenadas por los carteles de Cali y Medell&iacute;n con las acciones terroristas y pr&aacute;cticas como el secuestro, que afectaron a la sociedad civil durante este periodo.</p>
 		<p>
 			Posteriormente, tambi&eacute;n es conveniente indagar con ellos sobre el Plan Colombia: &iquest;lo han escuchado mencionar?, &iquest;lo conocen?, &iquest;qu&eacute; conocen?</p>
 		<p class="cabecera2">
@@ -26,7 +26,7 @@
 		<p>
 			Se sugiere profundizar y leer art&iacute;culos de prensa relacionados con el Plan Colombia en los siguientes medios:</p>
 		<p class="tab1">
-			- Especial de la Presidencia de la Rep&uacute;blica de Colombia sobre el Plan de Colombia&nbsp;[<a href="http://especiales.presidencia.gov.co/Documents/20160204-plan-colombia/plan-colombia.html" target="_blank">VER</a>].</p>
+			- Especial de la Presidencia de la Rep&uacute;blica de Colombia sobre el Plan Colombia&nbsp;[<a href="http://especiales.presidencia.gov.co/Documents/20160204-plan-colombia/plan-colombia.html" target="_blank">VER</a>].</p>
 		<p class="tab1">
 			- Peri&oacute;dico El Tie<span style="line-height: 1em; font-size: 1em;">mpo&nbsp;[</span><a href="http://www.eltiempo.com/noticias/plan-colombia" style="line-height: 1em; font-size: 1em;" target="_blank">VER</a><span style="line-height: 1em; font-size: 1em;">].</span></p>
 		<p class="tab1">
