--- a/fuentes/visuales/grado11/guion06/guionAbierto/CS_11_06_CO_Recurso010/Profesor.html
+++ b/fuentes/visuales/grado11/guion06/guionAbierto/CS_11_06_CO_Recurso010/Profesor.html
@@ -16,23 +16,23 @@
 		<p class="cabecera2">
 			Antes de la presentaci&oacute;n</p>
 		<p>
-			Como paso previo, pida a los estudiantes que, de forma individual, reflexionen por escrito sobre el concepto de cultura. P&iacute;dales que escriban qu&eacute; es para ellos en dos o tres l&iacute;neas. Ya que puede no resultarles f&aacute;cil, sugerimos algunas preguntas que ayuden a guiar su reflexi&oacute;n, que no debe exceder los cinco minutos:</p>
+			Como paso previo, pida a los estudiantes que, de forma individual, reflexionen por escrito sobre el concepto de cultura. P&iacute;dales que escriban qu&eacute; es para ellos en dos o tres l&iacute;neas. Ya que puede no resultarles f&aacute;cil, sugerimos algunas preguntas que ayuden a guiar su reflexi&oacute;n:</p>
 		<p class="tab1">
 			- &iquest;Cu&aacute;les son los distintos elementos que permiten hablar de cultura?</p>
 		<p class="tab1">
 			- &iquest;C&oacute;mo se difunde o transmite la cultura?</p>
 		<p class="tab1">
 			- &iquest;Existen algunos elementos que puedan considerarse definitorios de una cultura determinada? &iquest;Ser&iacute;an los mismos en otras culturas?</p>
-		<p class="normal">
-			Tambi&eacute;n puede pedir a los estudiantes que analicen las siguientes frases en las que aparece el concepto de cultura:</p>
 		<p class="tab1">
-			<span class="cursiva">-&nbsp;<span class="cursiva">Mariana</span>&nbsp;es una persona de una gran <span class="negrita">cultura</span>.</span></p>
+			- &iquest;Qu&eacute; es la cultura material?</p>
 		<p class="tab1">
-			<span class="cursiva">- La <span class="negrita">cultura </span>colombiana&nbsp;es rica en tradiciones y festejos populares.</span></p>
+			- &iquest;Qu&eacute; es la cultura inmaterial?</p>
 		<p class="tab1">
-			<span class="cursiva">- Durante la d&eacute;cada de los ochenta surgi&oacute; la <span class="negrita">cultura </span>punk.</span></p>
+			- &iquest;Cu&aacute;les son las expresiones m&aacute;s recientes de la cultura colombiana?</p>
 		<p class="tab1">
-			<span class="cursiva">- El mundo de la <span class="negrita">cultura </span>est&aacute; de luto por la muerte de Gabriel Garcia M&aacute;rquez.</span></p>
+			- &iquest;C&oacute;mo influye la globalizaci&oacute;n en la cultura?</p>
+		<p class="tab1">
+			- &iquest;Qu&eacute; incidencia tiene la Constituci&oacute;n Pol&iacute;tica de Colombia en la construcci&oacute;n de cultura en el pa&iacute;s?</p>
 		<p class="cabecera2">
 			Durante la presentaci&oacute;n</p>
 		<p>
