--- a/fuentes/visuales/grado10/guion02/guionAbierto/CS_10_02_CO_Recurso180/Principal.html
+++ b/fuentes/visuales/grado10/guion02/guionAbierto/CS_10_02_CO_Recurso180/Principal.html
@@ -7,10 +7,10 @@
 	
 	<!--
 				MOTOR HTML M102ab
-				VERSION: 15.11.5.1
+				VERSION: 16.3.2.1
 	-->
 	
-	<title>Competencias: elaboración de la reseña de un texto sobre conflictos poscoloniales</title>
+	<title>Proyecto: la industrialización de los tigres y dragones asiáticos</title>
 	
 	<!--<script type="text/javascript" src="extlib/jquery/1_11_1/jquery_1_11_1_min.js"></script>
 	<script type="text/javascript" src="extlib/jquery_form/20130711/jquery_form_min.js"></script>
@@ -91,7 +91,7 @@
 				<!--<div class="cerrar"><a href="#" onClick="javascript:ejercicio_cerrar();"><img src="motor/images/cerrar-ico.jpg" /></a></div>-->
 			</div>
 			<div class="entradilla">
-				<p><div id="enunciado"> </div></p>
+				<div id="enunciado"> </div>
 			</div>
 			<div id="contenido" class="contenido">
 				<div id="contenido_embed" style="height: 100%; min-height: 440px; padding: 0px; margin: 0px; overflow: hidden; position: relative;">
